made sidebar sticky and fixed visibility on all pages

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,10 +13,12 @@ html {
 }
 
 body {
+  height: 100vh;
+  width: 100vw;
   background-color: var(--main-background);
   color: var(--main-color);
   font-family: 'Roboto', sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h1,
@@ -50,6 +52,8 @@ a:hover {
   text-transform: capitalize;
   width: var(--sidebar-width);
   height: 100vh;
+  position: sticky;
+  top: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -87,12 +91,12 @@ a:hover {
   height: 20px;
 }
 
-.content {
-  width: calc(100vw - var(--sidebar-width));
-}
-
 .hero {
   width: 100%;
+}
+
+.content section {
+  height: 100vh;
 }
 
 @media (width <= 768px) {
